Changelog
=========

2020.1.0rc3 (unreleased)
------------------------

- Assign correct role Reader to reader_group. [deiferni]
- Add permission and role to use the workspace Client. [njohner]
- Add french titles for initial content in the policytemplate. [phgross]
- Enable the solr flag in the policytemplate. [phgross]


2020.1.0rc2 (2020-02-11)
------------------------

- Use Teamraum in mail header for invitations. [njohner]
- Integrate related workspaces to dossiers. [elioschmutz]
- Implement the teamraum client authentication flow. [elioschmutz]
- Implement the workspace client to make requests to a teamraum from GEVER. [elioschmutz]
- Implement the workspace client authentication flow. [elioschmutz]
- Handle deployments with no repository in navigation endpoint. [njohner]
- Only return create_task in actions endpoint on dossiers and tasks. [njohner]
- Fix JS ordering issue again. [njohner]
- Add documentation for sharing endpoint. [njohner]
- Always request UID from solr, as it is needed for snippets. [njohner]
- Speed up validation of dossier resolution preconditions. [njohner]
- Generally disallow to move proposals outside of its main dossier. [elioschmutz]
- Add tabbedview move action for proposals. [elioschmutz]


2020.1.0rc1 (2020-01-30)
------------------------

- Fix JS ordering issue: define overlayhelpers.js position. [njohner]
- Add French API and admin documentations. [njohner]
- Fix volatile related proposal documents. [elioschmutz]
- Add a button to create a task from a proposal. [elioschmutz]
- Allow to unlock and edit submitted documents in a submitted proposal. [elioschmutz]
- Add new_document_from_task file_action. [lgraf]
- Implement PossibleWorkspaceFolderParticipantsVocabulary to get all possible workspace folder participants. [elioschmutz]
- Implement GET, PATCH and POST @participations endpoint for workspace folders. [elioschmutz]
- Implement @role-inheritance serivce endpoint for workspace folders. [deiferni]