@@ -1,0 +1,78 @@
+from ftw.testbrowser import browsing
+from opengever.workspaceclient.tests import FunctionalWorkspaceClientTestCase
+from plone import api
+from zExceptions import NotFound
+from zExceptions import Unauthorized
+import json
+
+
+def fix_publisher_test_bug(browser, obj):
+    # We need to make a GET request before using the `@create-linked-workspace`
+    # endpoint. This is a workaround to fix a weird issue where we get
+    # a silent `ConflictError`. ZPublisher will then automatically
+    # republish the request although the previous POST request has
+    # already been handled successfully, effectively creating the new
+    # workspace twice
+    #
+    # If we get the dossier first, before creating a workspace, it seems
+    # to work properly.
+    #
+    # This issue only appears in a testing environment.
+    browser.open(obj, method='GET', headers={'Accept': 'application/json'})
+
+
+class TestLinkedWorkspaces(FunctionalWorkspaceClientTestCase):
+
+    @browsing
+    def test_create_linked_workspace(self, browser):
+        browser.login()
+        with self.observe_children(self.workspace_root) as children:
+            with self.workspace_client_env():
+                fix_publisher_test_bug(browser, self.dossier)
+                browser.open(
+                    self.dossier.absolute_url() + '/@create-linked-workspace',
+                    data=json.dumps({"title": "My linked workspace"}),
+                    method='POST',
+                    headers={'Accept': 'application/json',
+                             'Content-Type': 'application/json'},
+                )
+
+        self.assertEqual(200, browser.status_code)
+        self.assertEqual(1, len(children['added']))
+        linked_workspace = children['added'].pop()
+
+        self.assertIn(browser.json.get('@id'),
+                      linked_workspace.absolute_url())
+        self.assertIn(browser.json.get('title'),
+                      linked_workspace.title)
+
+    @browsing
+    def test_raise_not_found_if_feature_is_not_activated(self, browser):
+        browser.login()
+        self.enable_feature(enabled=False)
+
+        browser.exception_bubbling = True
+        with self.assertRaises(NotFound):
+            browser.open(
+                self.dossier.absolute_url() + '/@create-linked-workspace',
+                data=json.dumps({"title": "My linked workspace"}),
+                method='POST',
+                headers={'Accept': 'application/json',
+                         'Content-Type': 'application/json'},
+            )
+
+    @browsing
+    def test_only_workspace_client_users_can_use_the_api(self, browser):
+        browser.exception_bubbling = True
+        browser.login()
+        with self.workspace_client_env():
+            roles = set(api.user.get_roles())
+            self.grant(roles.difference({'WorkspaceClientUser'}))
+            with self.assertRaises(Unauthorized):
+                browser.open(
+                    self.dossier.absolute_url() + '/@create-linked-workspace',
+                    data=json.dumps({"title": "My linked workspace"}),
+                    method='POST',
+                    headers={'Accept': 'application/json',
+                             'Content-Type': 'application/json'},
+                )
